--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 # Groq API Configuration
 EXPO_PUBLIC_GROQ_API_KEY=your_groq_api_key_here
 
+# OCR.space API Configuration
+EXPO_PUBLIC_OCR_API_KEY=your_ocr_space_api_key_here
+
 # App Configuration
 EXPO_PUBLIC_APP_NAME=August.ai
 EXPO_PUBLIC_APP_VERSION=1.0.0
