--- a/eas.json
+++ b/eas.json
@@ -12,11 +12,7 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease",
-        "env": {
-          "EXPO_PUBLIC_GROQ_API_KEY": "your_groq_api_key_here",
-          "EXPO_PUBLIC_OCR_API_KEY": "your_ocr_api_key_here"
-        }
+        "gradleCommand": ":app:assembleRelease"
       }
     },
     "production": {
@@ -25,11 +21,7 @@
     "release": {
       "android": {
         "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease",
-        "env": {
-          "EXPO_PUBLIC_GROQ_API_KEY": "your_groq_api_key_here",
-          "EXPO_PUBLIC_OCR_API_KEY": "your_ocr_api_key_here"
-        }
+        "gradleCommand": ":app:assembleRelease"
       },
       "distribution": "internal"
     }
